@@ -39,7 +39,8 @@ dependencies {
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 
-    implementation group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '2.5.9'
+    // https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-jsr223
+    implementation group: 'org.codehaus.groovy', name: 'groovy-jsr223', version: '3.0.6'
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
@@ -54,10 +55,19 @@ idea{
     }
 }
 
+installDist {
+    println "java_home: " + System.properties['java.home']
+}
+
 application {
     // Define the main class for the application.
     //mainClassName = 'text_adventure.GameMaker'
     mainClassName = 'text_adventure.Game'
+    //applicationDefaultJvmArgs = ['--add-opens java.base/java.lang=ALL-UNNAMED']
+    applicationDefaultJvmArgs = [//'--illegal-access=permit',
+                                 '--add-opens','java.base/java.lang=ALL-UNNAMED',
+                                 '--add-opens','java.base/java.io=ALL-UNNAMED',
+                                 '--add-opens','java.base/java.util.regex=ALL-UNNAMED']
 }
 
 test {
